# peakstone

./: .dockerignore  .gitignore  CONTRIBUTING.md  DATA-LICENSE.md  NOTICE  PLAN.md  README.md  RELEASE.md  RELEASING.md  TRADEMARK.md  alembic.ini  build_bcb_env.sh  pyproject.toml  requirements.txt  vision.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
api/: README.md  db.py  identity.py  ingest.py  main.py  models.py  proposals.py  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 20932c8fcabd_challenge_proposals_lifecycle.py
api/tests/: test_api.py
bench/: __init__.py  agentic.py  apply_judge.py  challenges.py  export_solutions.py  global_rules.py  merge.py  provider.py  recommend.py  report.py  report_html.py  runner.py  sandbox.py
bench/jsenv/: package-lock.json
challenges/adherence/constraints/: meta.toml  rules.py  spec.md
challenges/adherence/py-style/: rules.py  spec.md
challenges/adherence/ts-style/: agent.md  rules.py  spec.md
challenges/agentic/js-parse-query/: meta.toml  spec.md
challenges/agentic/py-roman/: spec.md
challenges/algorithms/algo-dp-01-counting-harshad-numbers-in-a-range/: meta.toml  spec.md
challenges/algorithms/algo-ds-01-range-assign-array-with-sum-and-maximum-/: meta.toml  spec.md
challenges/algorithms/algo-graph-01-treasure-runs-on-a-directed-road-map/: meta.toml  spec.md
challenges/algorithms/algo-greedy-01-freelance-gig-scheduling-for-maximum-pay/: meta.toml  spec.md
challenges/algorithms/algo-numalgo-01-generalized-discrete-logarithm/: meta.toml  spec.md
challenges/algorithms/algo-string-01-longest-k-repeated-substring/: meta.toml  spec.md
challenges/bigcodebench/: SOURCE.md
challenges/bigcodebench/bcb-0000-calculates-the-average-of-the-sums/: meta.toml  spec.md
challenges/bigcodebench/bcb-0001-generate-a-random-string-of-the/: meta.toml  spec.md
challenges/bigcodebench/bcb-0002-create-a-dictionary-in-which-keys/: meta.toml  spec.md
challenges/bigcodebench/bcb-0003-create-a-dictionary-where-keys-are/: meta.toml  spec.md
challenges/bigcodebench/bcb-0004-count-the-occurrence-of-each-integer/: meta.toml  spec.md
challenges/bigcodebench/bcb-0005-create-a-dictionary-where-keys-are/: meta.toml  spec.md
challenges/bigcodebench/bcb-0006-find-the-latest-log-file-in/: meta.toml  spec.md
challenges/bigcodebench/bcb-0007-find-the-best-selling-product-from-a/: meta.toml  spec.md
challenges/bigcodebench/bcb-0008-convert-elements-in-t1-to-integers/: meta.toml  spec.md
challenges/bigcodebench/bcb-0009-create-a-pandas-dataframe-from-a/: meta.toml  spec.md
challenges/bigcodebench/bcb-0010-convert-elements-in-t1-to-integers/: meta.toml  spec.md
challenges/bigcodebench/bcb-0011-converts-elements-in-t1-a-tuple/: meta.toml  spec.md
challenges/bigcodebench/bcb-0012-runs-the-provided-backup-shell-script/: meta.toml  spec.md
challenges/bigcodebench/bcb-0013-download-all-files-from-a-specific/: meta.toml  spec.md
challenges/bigcodebench/bcb-0014-archive-a-specified-project-directory-into/: meta.toml  spec.md
challenges/bigcodebench/bcb-0015-execute-a-list-of-shell-commands/: meta.toml  spec.md
challenges/bigcodebench/bcb-0016-backup-all-log-files-in-a/: meta.toml  spec.md
challenges/bigcodebench/bcb-0017-check-if-a-particular-process-is/: meta.toml  spec.md
challenges/bigcodebench/bcb-0018-divide-a-csv-file-into-several/: meta.toml  spec.md
challenges/env/: gen_elect.py  gen_kvquorum.py  gen_partition.py
challenges/go/01-unique/: spec.md  (+1 more)
challenges/humaneval/: SOURCE.md
challenges/longcontext/: generate.py
challenges/mathsets/: SOURCE.md
dashboard/: README.md  app.py  client.py  history.py  models.py  reproduce.py
dashboard/tests/: test_dashboard.py
engine/: adherence.py  agentic.py  apply_judge.py  bundle.py  export_solutions.py  extract.py  judge.py  keys.py  merge.py  paths.py  propose.py  recommend.py  report_html.py  runner.py  sandbox.py
engine/env/: README.md  __init__.py  base.py  capabilities.py  docker.py  firecracker.py  harness.py  local.py  netshape.py  planner.py  spec.py
engine/jsenv/: package.json
engine/schema/: result-bundle.schema.json
engine/tests/: test_bundle_hardening.py
infra/: .env.example  Caddyfile  Dockerfile  deploy.sh  docker-compose.yml
peakstone/: __init__.py
peakstone.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
peakstone/api/: README.md  __init__.py  __main__.py  identity.py  ingest.py  main.py  models.py  proposals.py  requirements.txt
peakstone/dashboard/: README.md  __init__.py  app.py  challenges.py  client.py  corpus.py  hardware.py  localboard.py  login.py  models.py  preflight.py  reproduce.py  submit.py  ui.py  update.py  wishlist.py
peakstone/engine/: agentic.py  bandwidth.py  bundle.py  capabilities.py  challenges.py  check.py  config.toml  contamination.py  estimate.py  export_solutions.py  handlers.py  honesty.py  judge.py  levels.py  levels.toml  matheval.py  merge.py  metrics.py  paths.py  private.py  provider.py  recommend.py  report.py  report_html.py  repro.py  runner.py  sandbox.py  scoreboard.py  scoring.py  serving.py  streamproto.py  swebench.py  versions.py  vram.py
peakstone/gateway/: __init__.py  __main__.py  app.py  auth.py  jobs.py  launch.py  swap.py
schema/: README.md  result-bundle.schema.json  taxonomy.json
scripts/: cut_release.sh  repack_to_standard.py
serve/: browse.py  download_models.sh  gen_swap_config.py  glm-planner.service  judge_claude.sh  judge_run.sh  llama-swap.service  llama-swap.yaml  measure_vram.sh  models.toml  planner_eval.sh  probe_ctx.sh  qwen3-coder.service  repair_failures.sh  reseed_judge.sh  run_all.sh  run_benchmark.sh  seed_agentic.sh  seed_official.sh  serve.sh  use.sh  vram.json
serve/aider-remote/: .aider.conf.yml  .aider.model.metadata.json
web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
web/components/: Filters.tsx  ui.tsx
web/lib/: api.ts  params.ts
web/public/: robots.txt
(+1218 files in other folders)
