[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peakstone"
version = "0.1.5"
description = "A public, reproducible benchmark platform tracking the capability frontier of open models (coding, agentic, planning)."
readme = "README.md"
requires-python = ">=3.11"   # tomllib (3.11) + PEP-604 unions
license = "Apache-2.0"
authors = [{ name = "The Peakstone Authors" }]
keywords = ["llm", "benchmark", "evaluation", "reproducibility", "coding", "agents", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4",       # validate result bundles against the schema
    "cryptography>=41",    # ed25519 signing/verification
    # the dashboard is the primary interface, so it's part of the base install — `pipx install
    # peakstone` gives a working TUI out of the box. textual = TUI; huggingface_hub = quant browser/
    # downloads; fastapi/uvicorn/httpx = the local model gateway (`peakstone serve` + chat).
    "textual>=0.60",
    "huggingface_hub>=0.20",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Back-compat alias: the dashboard deps are now in the base install, so `peakstone[dashboard]` still
# works (it's a no-op extra) for anyone using the older command.
dashboard = []
dev = ["pytest>=8", "httpx>=0.27"]
# NOTE: the submission/leaderboard API (FastAPI + Postgres) is intentionally NOT a PyPI extra.
# It is the *server* side (deployed to peakstone.ai), not something users install. It ships only
# from this repo via Docker (see infra/) and pins its deps in peakstone/api/requirements.txt.

[project.scripts]
peakstone = "peakstone.dashboard.app:main"
peakstone-bench = "peakstone.engine.runner:main"

[project.urls]
Homepage = "https://peakstone.ai"
Source = "https://github.com/peakstone-ai/peakstone"

# Everything imports under the single top-level `peakstone` package (no generic top-level names on
# PyPI). The published wheel is the CLIENT only: peakstone.engine (harness) + peakstone.dashboard
# (TUI). The server (peakstone.api) and the web frontend (web/) deploy from this repo, not PyPI.
[tool.setuptools.packages.find]
include = ["peakstone*"]
exclude = ["peakstone.api*", "web*", "*.tests", "*.tests.*"]

# Packaged data that must travel in the wheel: the bundle JSON Schema (the reproducibility contract)
# and the run config. With these, a bare `pip install` can produce + validate signed bundles. The
# challenge corpus and serve/ helpers are intentionally NOT shipped — running the suite needs a
# checkout anyway (reference solutions, the JS sandbox's node_modules, serve.sh, GGUF weights), so
# peakstone.engine.paths resolves them from $PEAKSTONE_REPO and errors clearly if absent.
[tool.setuptools.package-data]
# runtime data files that must ship in the wheel (loaded from the package dir at runtime)
"peakstone.engine" = ["config.toml", "levels.toml", "schema/*.json", "schema/*.md"]
"peakstone.gateway" = ["webchat/*.html"]   # the chat UI served by `peakstone serve`
